# lab7

./: CMakeLists.txt
task0/task0b/: task0b.c  untitled
task1/task1a/: abc  digit.c  makefile  ohad.txt  task1a.c
